# neuroEvolution

./: .fuse_hidden0000009c00000003  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  neuroevolution
include/: feed_forward_nn.h  functions.h  neuroevolution.h  neuron.h
source/: CMakeLists.txt  feed_forward_nn.cpp  neuron.cpp  train_perceptron.cpp
src/: feed_forward_nn.cpp  functions.cpp  main.cpp  neuron.cpp
tests/: test_neuroEvolution.cpp
